# certified-payload-transport-pipeline

./: .gitignore  CINEMATIC_DEMO.md  DEMO_INDEX.md  FILE_GUIDE.md  README.md
data/: README.md  case_manifest.json  demo1_map.json  demo2_map.json  demo3_case.json  demo3_map.json  demo4_map.json  demo5_case.json  demo6_map.json  demo8_case.json
docs/: CODE_READING_ORDER.md  GAZEBO_BASELINE.md  PAPER_QP_CONTROLLER_NOTES.md  PIPELINE_OVERVIEW.md  PROJECT_STRUCTURE.md  RUNBOOK.md  SIMULATOR_DEMO.md  demo6_state_flow.html
figures/: drake_iris_server.py  iris_map_designer.html
gazebo_pose_replay/: PayloadPoseReplaySystem.cc  README.md
scripts/: README.md  build_gazebo_pose_replay_plugin.sh  capture_cinematic_screenshot.sh  rebuild_standard_qp_demos.sh  record_cinematic_demo.sh  run_cinematic_demo.sh  run_demo.sh  (+9 more)
src/swarm_random_payload/: README.md  package.xml  setup.cfg  setup.py
src/swarm_random_payload/config/: cinematic_payload_demo.rviz  payload_transport.yaml
src/swarm_random_payload/data/: demo1_case.json  demo2_case.json  demo4_case.json  demo5_map.json  demo6_case.json  demo7_case.json  demo7_map.json  demo8_map.json
src/swarm_random_payload/launch/: case_payload_demo.launch.py  cinematic_payload_demo.launch.py  random_payload_demo.launch.py  simple_payload_demo.launch.py
src/swarm_random_payload/resource/: swarm_random_payload
src/swarm_random_payload/swarm_random_payload/: __init__.py  gazebo_live_overlay.py  gazebo_payload_tether.py  gazebo_velocity_tracker.py  paper_qp_controller.py  random_payload_model.py  random_payload_node.py
(+13 files in other folders)
